--- a/Core/Core.dproj
+++ b/Core/Core.dproj
@@ -77,10 +77,10 @@
         <DCC_DebugDCUs>true</DCC_DebugDCUs>
         <VerInfo_MajorVer>2</VerInfo_MajorVer>
         <VerInfo_AutoIncVersion>true</VerInfo_AutoIncVersion>
-        <VerInfo_Build>871</VerInfo_Build>
-        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=2.0.1.871;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
+        <VerInfo_Build>876</VerInfo_Build>
+        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=2.0.1.876;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
         <DCC_DUPLICATE_CTOR_DTOR>false</DCC_DUPLICATE_CTOR_DTOR>
-        <Debugger_HostApplication>C:\XE\Projects\Device2\_exe\Debug\Easy64Inc.exe</Debugger_HostApplication>
+        <Debugger_HostApplication>C:\XE\Projects\Device2\PlotTst\Win32\Debug\Project4.exe</Debugger_HostApplication>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <DCC_MapFile>3</DCC_MapFile>
         <DCC_BplOutput>..\_exe\$(Config)\</DCC_BplOutput>
@@ -176,6 +176,8 @@
         <DCCReference Include="..\Vector.pas"/>
         <DCCReference Include="Plot.Controls.pas"/>
         <DCCReference Include="JDtools.pas"/>
+        <DCCReference Include="LasDataSet.pas"/>
+        <DCCReference Include="FileDataSet.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
